vpc.tf
resource "aws_vpc" "developer" {
  cidr_block       = var.cidr_block
  enable_dns_hostnames = var.enable_dns_hostnames

  tags = merge(var.common_tags, var.functional_tags)
}
